添加数据库文件, 修改db.properties注释

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,7 @@
-driver=com.mysql.cj.jdbc     #根据自己MySQL版本选择 5.0+请使用: com.mysql.jdbc  8.0+请使用: com.mysql.cj.jdbc
-url=jdbc:mysql://localhost:3306/level?serverTimezone=UTC   #根据自己需要设置连接数据库
-username=root       #数据库用户名
-password=root       #数据库密码
+#根据自己MySQL版本选择 5.0+请使用: com.mysql.jdbc  8.0+请使用: com.mysql.cj.jdbc
+driver=com.mysql.cj.jdbc.Driver
+#根据自己需要设置连接数据库
+url=jdbc:mysql://localhost:3306/level?serverTimezone=UTC
+#数据库用户名 和 密码
+username=root
+password=root
